--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,155 +1,212 @@
-* {
+/** {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}*/
+.body {
+    background: -webkit-linear-gradient(90deg, rgba(0, 0, 0, 0.3) 0, #FFFFFF 2px, rgba(0, 0, 0, 0) 2px, rgba(0, 0, 0, 0) 100%), -webkit-linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0, #FFFFFF 2px, rgba(0, 0, 0, 0) 2px, rgba(0, 0, 0, 0) 100%), -webkit-linear-gradient(90deg, rgba(0, 0, 0, 0.13) 0, rgba(255, 255, 255, 0.298039) 1px, rgba(0, 0, 0, 0) 1px, rgba(0, 0, 0, 0) 100%), -webkit-linear-gradient(0deg, rgba(0, 0, 0, 0.12) 0, rgba(255, 255, 255, 0.298039) 1px, rgba(0, 0, 0, 0) 1px, rgba(0, 0, 0, 0) 100%), rgba(226, 226, 226, 1);
+    background: -moz-linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0, #FFFFFF 2px, rgba(0, 0, 0, 0) 2px, rgba(0, 0, 0, 0) 100%), -moz-linear-gradient(90deg, rgba(0, 0, 0, 0.3) 0, #FFFFFF 2px, rgba(0, 0, 0, 0) 2px, rgba(0, 0, 0, 0) 100%), -moz-linear-gradient(0deg, rgba(0, 0, 0, 0.13) 0, rgba(255, 255, 255, 0.298039) 1px, rgba(0, 0, 0, 0) 1px, rgba(0, 0, 0, 0) 100%), -moz-linear-gradient(90deg, rgba(0, 0, 0, 0.12) 0, rgba(255, 255, 255, 0.298039) 1px, rgba(0, 0, 0, 0) 1px, rgba(0, 0, 0, 0) 100%), rgba(226, 226, 226, 1);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0, #FFFFFF 2px, rgba(0, 0, 0, 0) 2px, rgba(0, 0, 0, 0) 100%), linear-gradient(90deg, rgba(0, 0, 0, 0.3) 0, #FFFFFF 2px, rgba(0, 0, 0, 0) 2px, rgba(0, 0, 0, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.13) 0, rgba(255, 255, 255, 0.298039) 1px, rgba(0, 0, 0, 0) 1px, rgba(0, 0, 0, 0) 100%), linear-gradient(90deg, rgba(0, 0, 0, 0.12) 0, rgba(255, 255, 255, 0.298039) 1px, rgba(0, 0, 0, 0) 1px, rgba(0, 0, 0, 0) 100%), rgba(226, 226, 226, 1);
+    background-position: -1px -1px;
+    -webkit-background-origin: padding-box;
+    background-origin: padding-box;
+    -webkit-background-clip: border-box;
+    background-clip: border-box;
+    -webkit-background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+    background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+}
+body {
+    background-color: white;
+
+}
+body, #content, .content {
+    padding: 0;
+    margin: 0;
+    width: 1920px;
+    height: 1080px !important;
+    max-height: 1080px !important;
 }
 
+.fontIcons {
+    font-family: 'icon-so' !important;
+}
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+h1 {
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: rgba(0,0,0,0.65);
+    margin: 0 auto;
+    z-index: 5;
+    float: left;
+    position: absolute;
+    left: 20px;
+    
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+h2 {
+    font-size: .85rem;
+}
 .dropdown {
     max-height: 0px;
     display: none;
-    line-height:100px;
-
-    margin:2px;
+    line-height: 100px;
+    margin: 2px;
     transition: all 1s;
 }
- 
+
 /* le bloc est visible lorsque la checkbox est cochée */
-#toggle-block:checked + .dropdown, #toggle-block2:checked + .dropdown, #toggle-block3:checked + .dropdown{
+
+#toggle-block:checked + .dropdown,
+#toggle-block2:checked + .dropdown,
+#toggle-block3:checked + .dropdown {
     max-height: 300px;
     display: block;
     transition: all 1s;
-	line-height:35px;
+    line-height: 35px;
 }
-
 .sidenav {
-	height: 1080px;
-    width: 200px;
+    font-size: 2.5em;
+    height: 650px;
+    width: 150px;
     position: absolute;
     z-index: 4;
-    top: 0;
-    left: 0;
-    background-color: #111;
+    top: 60px;
+    left: 20px;
+    background-color: rgba(0,0,0,0.7);
     overflow-x: hidden;
-
 }
-.sidenav a, label, .link-obs,  select {
-   padding: 0;
+.sidenav2 {
+    font-size: 2.5em;
+    height: 650px;
+    width: 260px;
+    position: absolute;
+    z-index: 4;
+    top: 40px;
+    right: 100px;
+    background-color: rgba(0,0,0,0.7);
+    overflow-x: hidden;
+}
+.sidenav a,
+label, 
+.sidenav2 a,
+.link-obs,
+select {
+    font-size: 0.95rem;
+    padding: 0;
     margin: 0;
     margin-left: .6em;
-display: inline-block;
- cursor: pointer;
-
+    display: block;
+    cursor: pointer;
     text-decoration: none;
-    font-size: 25px;
+
     color: #818181;
-line-height:35px;
-
-
+    line-height: 35px;
 }
-.sidenav h1 {
-
-	margin-left: 15px; 
-
-
+.sidenav h1,
+.sidenav2 h1 {
+    font-size: 1.8em;
+    margin-left: 15px;
 }
-.sidenav a:hover, label:hover{
+.sidenav a:hover,
+.sidenav2 a:hover,
+label:hover {
     color: #f1f1f1;
 }
 
 
-.body{
-background: -webkit-linear-gradient(90deg, rgba(0,0,0,0.3) 0, #FFFFFF 2px, rgba(0,0,0,0) 2px, rgba(0,0,0,0) 100%), -webkit-linear-gradient(0deg, rgba(0,0,0,0.3) 0, #FFFFFF 2px, rgba(0,0,0,0) 2px, rgba(0,0,0,0) 100%), -webkit-linear-gradient(90deg, rgba(0,0,0,0.13) 0, rgba(255,255,255,0.298039) 1px, rgba(0,0,0,0) 1px, rgba(0,0,0,0) 100%), -webkit-linear-gradient(0deg, rgba(0,0,0,0.12) 0, rgba(255,255,255,0.298039) 1px, rgba(0,0,0,0) 1px, rgba(0,0,0,0) 100%), rgba(226,226,226,1);
-  background: -moz-linear-gradient(0deg, rgba(0,0,0,0.3) 0, #FFFFFF 2px, rgba(0,0,0,0) 2px, rgba(0,0,0,0) 100%), -moz-linear-gradient(90deg, rgba(0,0,0,0.3) 0, #FFFFFF 2px, rgba(0,0,0,0) 2px, rgba(0,0,0,0) 100%), -moz-linear-gradient(0deg, rgba(0,0,0,0.13) 0, rgba(255,255,255,0.298039) 1px, rgba(0,0,0,0) 1px, rgba(0,0,0,0) 100%), -moz-linear-gradient(90deg, rgba(0,0,0,0.12) 0, rgba(255,255,255,0.298039) 1px, rgba(0,0,0,0) 1px, rgba(0,0,0,0) 100%), rgba(226,226,226,1);
-  background: linear-gradient(0deg, rgba(0,0,0,0.3) 0, #FFFFFF 2px, rgba(0,0,0,0) 2px, rgba(0,0,0,0) 100%), linear-gradient(90deg, rgba(0,0,0,0.3) 0, #FFFFFF 2px, rgba(0,0,0,0) 2px, rgba(0,0,0,0) 100%), linear-gradient(0deg, rgba(0,0,0,0.13) 0, rgba(255,255,255,0.298039) 1px, rgba(0,0,0,0) 1px, rgba(0,0,0,0) 100%), linear-gradient(90deg, rgba(0,0,0,0.12) 0, rgba(255,255,255,0.298039) 1px, rgba(0,0,0,0) 1px, rgba(0,0,0,0) 100%), rgba(226,226,226,1);
-  background-position: -1px -1px;
-  -webkit-background-origin: padding-box;
-  background-origin: padding-box;
-  -webkit-background-clip: border-box;
-  background-clip: border-box;
-  -webkit-background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
-  background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+button, html input[type=button], input[type=reset], input[type=submit], .pure-button, input {
+    font-size: 1rem;
+}
 
-}
-body{
-	background-color: white;
-}
-#menu {
+
+
+/*#menu {
     margin-left: 150px;
     width: 150px;
-	height: 150px;
+    height: 150px;
     top: 0;
     left: 0;
-    bottom: 0;
-    z-index: 1;
-    color: white;
+    z-index: 10;
     overflow-y: auto;
+}*/
+div[id^=menu], img, img[id^=img] {
+    position: absolute;
+    float: left;
+    top: 100px;
+    left: 100px;
+    z-index: 10;
+    overflow-y: auto;
+
 }
 div[id^=menu] {
     width: 150px;
-	height: 150px;
-    top: 10;
-    left: 150;
-    z-index: 1;
-    overflow-y: auto;
-	background-color: rgba(25, 24, 24, 1);
-	
+    height: 150px;
+    background-color: rgba(25, 24, 24, 1);
 }
-#menu, .header {
+#menu,
+.header {
     background-color: #191818;
 }
-div[id^=menu]:hover, #text:hover, img:hover, p:hover, .select {
-
-  -webkit-box-shadow:inset 0px 0px 0px 3px rgba(81, 203, 238, 1);
+div[id^=menu]:hover,
+#text:hover,
+img[id^=image]:hover,
+p:hover,
+.select {
+    -webkit-box-shadow:inset 0px 0px 0px 3px rgba(81, 203, 238, 1);
     -moz-box-shadow:inset 0px 0px 0px 3px rgba(81, 203, 238, 1);
     box-shadow:inset 0px 0px 0px 3px rgba(81, 203, 238, 1);
-
-
 }
-
 p {
     font-size: 50px;
-	    position: fixed;
-	background-color: green;
-	width: 10px;
+    background-color: green;
+    width: 10px;
 }
-
 ul {
-	color: #00ff00;
-}
-h1
-{
-	color: #00ff00;
-}
-h2
-{
-	color: #00ff00;
+    color: #00ff00;
 }
 
-h3
-{
-	color: #00ff00;
+h2 {
+    color: #00ff00;
+}
+h3 {
+    color: #00ff00;
+}
+#content {
+    z-index: 1;
+   
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    float: left;
+}
+.content {
+    margin-left: 0;
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+.content2 {
+    display: none;
+}
+.previews {
+    width: 10%;
 }
 
-#content{
-
-height: 1080px;
-width: 1920px;
-	z-index: 1;
-
-}
-.content{
-
-margin-left: 200px;
-
-}
-.content2{
-margin-left: 0 !important;
-
-}
-.previews{
-	width: 10%;
-}
 img {
     max-width: auto;
-    max-height: auto;
+    max-height: 100%;
 }
