--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,8 +4,10 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #155799 !default;
+//$header-bg-color: #159957 !default;
+//$header-bg-color-secondary: #155799 !default;
+$header-bg-color: #000 !default;
+$header-bg-color-secondary: #fff !default;
 
 // Text
 $section-headings-color: #159957 !default;
