--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,9 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
     </br>
-     <a href="another-page.html" class="">Demo</a>
-     <a href="another-page.html" class="">Demo</a>
-    <a href="another-page.html" class="">Demo</a>
+  <span class="site-footer-credits"><a href="another-page.html" class="">Demo</a></span>
+     <span class="site-footer-credits"><a href="another-page.html" class="">Demo</a></span>
+    <span class="site-footer-credits"><a href="another-page.html" class="">Demo</a></span>
     </section>
 
     <section class="main-content">
