--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
     </br>
-  <a href="another-page.html" class="site-footer-creditssite-footer-creditssite-footer-credits">Demo</a>
-    <a href="another-page.html" class="site-footer-creditssite-footer-credits">Demo</a>
+    <a href="another-page.html" class="site-footer-credits">Demo</a>
+    <a href="another-page.html" class="site-footer-credits">Demo</a>
     <a href="another-page.html" class="site-footer-credits">Demo</a>
     </section>
 
