--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -35,10 +35,11 @@ body {
 a {
   color: $body-link-color;
   text-decoration: none;
-
+/*
   &:hover {
     text-decoration: underline;
   }
+  */
 }
 
 .btn {
